--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "cpa1464",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "index.ts",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc && mkdir -p ./dist/src/maps && mkdir -p ./dist/src/samples && cp -rf ./src/maps/* ./dist/src/maps && cp -rf ./src/samples/* ./dist/src/samples",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=8",
     "npm": ">=5.6.0"
