--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cpa1464",
-  "version": "0.1.2",
-  "main": "index.ts",
+  "version": "0.1.3",
+  "main": "index.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc && mkdir -p ./dist/src/maps && mkdir -p ./dist/src/samples && cp -rf ./src/maps/* ./dist/src/maps && cp -rf ./src/samples/* ./dist/src/samples",
+    "build": "tsc && mkdir -p ./dist/maps && mkdir -p ./dist/samples && cp -rf ./src/maps/* ./dist/maps && cp -rf ./src/samples/* ./dist/samples",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
