--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cpa1464",
-  "version": "0.1.4",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "version": "0.1.5",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc && mkdir -p ./dist/maps && mkdir -p ./dist/samples && cp -rf ./src/maps/* ./dist/maps && cp -rf ./src/samples/* ./dist/samples",
